# mote-ros-noetic

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  package.xml
config/: controllers.yaml
docker/: docker-compose.yml  docker-entrypoint.sh  ros_workspace.Dockerfile
launch/: mote.launch
mote_base/: CMakeLists.txt  package.xml
mote_base/config/: controllers.yaml
mote_base/launch/: mote.launch
mote_control/: CMakeLists.txt  package.xml
mote_control/config/: control.yaml  ekf.yaml
mote_control/launch/: control.launch
mote_demos/: CMakeLists.txt  package.xml
mote_demos/launch/: amcl_localization.launch  gmapping_slam.launch  simple_teleop_viz.launch
mote_description/: CMakeLists.txt  package.xml
mote_description/description/: mote.urdf.xacro
mote_description/description/mote/: robot.urdf
mote_description/launch/: description.launch
mote_navigation/: CMakeLists.txt  package.xml
mote_navigation/config/: gmapping_params.yaml
mote_navigation/launch/: amcl.launch  gmapping.launch
mote_viz/: CMakeLists.txt  package.xml
mote_viz/launch/: viz.launch
src/: mote_node.cpp
