<?xml version="1.0"?>
<package format="2">
  <name>mote_ros_noetic</name>
  <version>0.1.0</version>
  <description>ROS Noetic driver for the Mote mobile robot. Publishes LiDAR, IMU, and wheel state; accepts velocity commands via ros_control.</description>
  <maintainer email="micacer48@gmail.com">mote</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>controller_manager</depend>
  <depend>diff_drive_controller</depend>

  <build_depend>nlohmann-json3-dev</build_depend>
</package>
