<?xml version="1.0"?>
<package format="2">
  <name>mote_demos</name>
  <version>0.1.0</version>
  <description>Demo launch files for the Mote robot (SLAM, localization, teleop).</description>
  <maintainer email="michael@michael-crum.com">Mote Contributors</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>mote_base</exec_depend>
  <exec_depend>mote_control</exec_depend>
  <exec_depend>mote_navigation</exec_depend>
  <exec_depend>mote_viz</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>amcl</exec_depend>

  <export></export>
</package>
