<?xml version="1.0"?>
<package format="2">
  <name>mote_navigation</name>
  <version>0.1.0</version>
  <description>Navigation (SLAM and localization) configuration for the Mote robot.</description>
  <maintainer email="michael@michael-crum.com">Mote Contributors</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>amcl</exec_depend>
  <exec_depend>gmapping</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>

  <export></export>
</package>
