<?xml version="1.0"?>
<package format="2">
  <name>mote_viz</name>
  <version>0.1.0</version>
  <description>Visualization (Foxglove Bridge) launch for the Mote robot.</description>
  <maintainer email="michael@michael-crum.com">Mote Contributors</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>foxglove_bridge</exec_depend>

  <export></export>
</package>
